@@ -1,4 +1,4 @@
-.TH HDPARM 8 "June 2015" "Version 9.46"
+.TH HDPARM 8 "June 2015" "Version 9.47"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
@@ -676,6 +676,9 @@ provides a safe fix for the problem for use with earlier kernels.
 .I -v 
 Display some basic settings, similar to \-acdgkmur for IDE.
 This is also the default behaviour when no options are specified.
+.TP
+.I -V
+Display program version and exit immediately.
 .TP
 .I --verbose 
 Display extra diagnostics from some commands.
